<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signupFormConstraintLayout"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/signUpTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="23dp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="18dp"
            android:text="@string/sign_up_title"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/signupFullNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="222dp"
            android:ems="10"
            android:hint="@string/fullName"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@id/signUpTitleTextView" />

        <EditText
            android:id="@+id/signupEmailEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/signupFullNameEditText" />

        <EditText
            android:id="@+id/signupUsernameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="222dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@id/signupEmailEditText" />

        <EditText
            android:id="@+id/signupPhoneEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="222dp"
            android:ems="10"
            android:hint="@string/phone"
            app:layout_constraintTop_toBottomOf="@id/signupUsernameEditText" />

        <EditText
            android:id="@+id/signUpPasswordEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="72dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/signupPhoneEditText" />

        <EditText
            android:id="@+id/signupConfirmPasswordEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="146dp"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/signUpPasswordEditText" />

        <Button
            android:id="@+id/signUpNowButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:text="@string/sign_up_now_button"
            app:layout_constraintTop_toBottomOf="@id/signupConfirmPasswordEditText" />

        <TextView
            android:id="@+id/signupToSigninInstructionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_to_signin_instruction_textview"
            app:layout_constraintTop_toBottomOf="@id/signUpNowButton"/>

        <TextView
            android:id="@+id/signUpToSignInLinkTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_title"
            app:layout_constraintTop_toBottomOf="@id/signUpNowButton"
            app:layout_constraintLeft_toRightOf="@id/signupToSigninInstructionTextView" />


    </android.support.constraint.ConstraintLayout>

</RelativeLayout>