<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signinFormLayout"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/signinTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="23dp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="18dp"
            android:text="@string/sign_in_title"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/signinUsernameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteY="86dp"
            app:layout_constraintTop_toBottomOf="@id/signinTitleTextView"/>

        <EditText
            android:id="@+id/signinPasswordEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="104dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/signinUsernameEditText" />

        <Button
            android:id="@+id/signInNowButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:text="@string/sign_in_title"
            app:layout_constraintTop_toBottomOf="@id/signinPasswordEditText" />

        <TextView
            android:id="@+id/signInToSignUpInstructionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/signInNowButton"/>
        <TextView
            android:id="@+id/signInToSignUpLinkTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin_to_signup_instruction_textview"
            app:layout_constraintTop_toBottomOf="@id/signInNowButton"
            app:layout_constraintLeft_toRightOf="@id/signInToSignUpInstructionTextView"
            android:autoLink="all"
            android:textColor="@color/colorPrimary"/>

    </android.support.constraint.ConstraintLayout>


</RelativeLayout>